# vsl

./: COPYING  MANIFEST.in  README.md  setup.cfg
examples/: config.vsl
misc/: begnac.vsl.desktop  begnac.vsl.service
src/vsl/: __init__.py  __main__.py  app.py  items.py  logger.py  root.py  tree.py  ui.py
src/vsl/fetchers/: __init__.py  base.py  chromium.py  firefox.py  misc.py  web.py
