[metadata]
name = vsl
version = attr: vsl.__version__
author = Itaï BEN YAACOV
author_email = candeb@free.fr
description = attr: vsl.__program_name__
long_description = file: README.md
url = https://github.com/begnac/vsl
keywords= launcher
license = GPLv3+
classifiers =
    Development Status :: 3 - Alpha
    Environment :: X11 Applications :: GTK
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Topic :: Utilities

[options]
include_package_data = True
scripts =
    bin/vsl
install_requires =
    gasyncio

[upload]
sign = True
identity = candeb@free.fr

[init_catalog]
domain = vsl
input_file = po/vsl.pot

[update_catalog]
domain = vsl
input_file = po/vsl.pot

[compile_catalog]
domain = vsl

[extract_messages]
input_dirs = src
output_file = po/vsl.pot
